TERMINADO POR FIN

--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -356,6 +356,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create a 'date' column with year, month and day."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -612,11 +619,17 @@
     }
    ],
    "source": [
-    "# Create a 'date' column with year, month and day.\n",
     "pollutants['FECHA'] = pd.to_datetime(pollutants[['ANNO', 'MES', 'DIA']].astype(str).agg('-'.join, axis= 1), errors='coerce', format='%Y-%m-%d')\n",
     "pollutants.drop(['ANNO', 'MES', 'DIA'], axis= 1, inplace= True)\n",
     "\n",
     "pollutants.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Import excel with information necessary for the project."
    ]
   },
   {
@@ -1045,6 +1058,7 @@
     }
    ],
    "source": [
+    "# Change comma for dot\n",
     "columns_to_change = ['LATITUD_G', 'LONGITUD_G']\n",
     "\n",
     "for column in columns_to_change:\n",
@@ -1057,6 +1071,13 @@
     "    stations_excel[column] = stations_excel[column].astype(float)\n",
     "\n",
     "stations_excel.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create dictionaries to introduce new variables."
    ]
   },
   {
@@ -4717,6 +4738,13 @@
    ],
    "source": [
     "pollutants.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove all NaN data"
    ]
   },
   {
