--- a/notebooks/RandomMadrid.ipynb
+++ b/notebooks/RandomMadrid.ipynb
@@ -9,18 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from pickle import dump"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "[16180 rows x 5 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +281,7 @@
        "[16180 rows x 1 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,41 +292,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/vscode/.local/lib/python3.11/site-packages/sklearn/base.py:1152: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
+      "/home/vscode/.local/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:425: FitFailedWarning: \n",
+      "2560 fits failed out of a total of 5120.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "2560 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 729, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/sklearn/base.py\", line 1145, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/sklearn/base.py\", line 638, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"/home/vscode/.local/lib/python3.11/site-packages/sklearn/utils/_param_validation.py\", line 96, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestClassifier must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'sqrt', 'log2'} or None. Got 'auto' instead.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/home/vscode/.local/lib/python3.11/site-packages/sklearn/model_selection/_search.py:979: UserWarning: One or more of the test scores are non-finite: [       nan        nan        nan ... 0.99965565 0.99968214 0.99968214]\n",
+      "  warnings.warn(\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_estimators=60, random_state=23)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_estimators=60, random_state=23)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "RandomForestClassifier(n_estimators=60, random_state=23)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejores hiperparámetros encontrados: {'bootstrap': False, 'max_depth': None, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200}\n"
+     ]
     }
    ],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "model = RandomForestClassifier(n_estimators = 60, random_state= 23)\n",
-    "model.fit(X_train, y_train)"
+    "# Convert the column vector to a 1D array\n",
+    "y_train_1d = np.ravel(y_train)\n",
+    "\n",
+    "# RandomForestClassifier Model\n",
+    "model = RandomForestClassifier(random_state=23)\n",
+    "\n",
+    "# Use the 1D array instead of the column vector to adjust the model\n",
+    "model.fit(X_train, y_train_1d)\n",
+    "\n",
+    "# Define the parameters to be adjusted\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 200, 300], \n",
+    "    'max_depth': [None, 10, 20, 30],     \n",
+    "    'min_samples_split': [2, 5, 10, 20],  \n",
+    "    'min_samples_leaf': [1, 2, 4, 8],    \n",
+    "    'max_features': ['auto', 'sqrt'],   \n",
+    "    'bootstrap': [True, False]            \n",
+    "}\n",
+    "\n",
+    "y_train_1d = np.ravel(y_train_1d)\n",
+    "\n",
+    "# Initialize GridSearchCV\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='accuracy')\n",
+    "\n",
+    "# Execute grid search\n",
+    "grid_search.fit(X_train, y_train_1d)\n",
+    "\n",
+    "# Obtain the best model\n",
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "# Print the best hyperparameters found\n",
+    "print(\"Mejores hiperparámetros encontrados:\", grid_search.best_params_)\n",
+    "\n",
+    "# Using the best model to make predictions on test data\n",
+    "predictions = best_model.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.999814585908529\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialise a new RandomForestClassifier model with the best hyperparameters found.\n",
+    "best_model = RandomForestClassifier(bootstrap=False, max_depth=None, max_features='sqrt',min_samples_split=2, min_samples_leaf=1, n_estimators=200, random_state=23)\n",
+    "\n",
+    "# Training the model with the complete training data\n",
+    "best_model.fit(X_train, y_train_1d)\n",
+    "\n",
+    "# Using this trained model to make predictions on new data\n",
+    "predictions = best_model.predict(X_test)\n",
+    "\n",
+    "# Evaluar el modelo en los datos de prueba\n",
+    "accuracy = best_model.score(X_test, y_test)\n",
+    "print(\"Accuracy:\", accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +440,7 @@
        "array([0, 1, 0, ..., 2, 0, 0])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +461,7 @@
        "0.999938195302843"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
