--- a/notebooks/RandomMadrid.ipynb
+++ b/notebooks/RandomMadrid.ipynb
@@ -395,7 +395,7 @@
     "# Using this trained model to make predictions on new data\n",
     "predictions = best_model.predict(X_test)\n",
     "\n",
-    "# Evaluar el modelo en los datos de prueba\n",
+    "# Evaluating the model on the test data\n",
     "accuracy = best_model.score(X_test, y_test)\n",
     "print(\"Accuracy:\", accuracy)\n"
    ]
